feat: implement complete order
