# cmd/server/main.go
@@ -77,6 +77,7 @@ func main() {
 	orders.GET("", utils.RegisterController(dbClient, controller.ListOrder))
 	orders.GET("/:id", utils.RegisterController(dbClient, controller.FindOrder))
 	orders.POST("/:id/cashpay", utils.RegisterController(dbClient, controller.Cashpay))
+	orders.POST("/:id/complete", utils.RegisterController(dbClient, controller.CompleteOrder))
 
 	e.Logger.Fatal(e.Start(":8080"))
 }
